Sec11_Chap125: cleaned code